Chat Background not showing- issue fiexd

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ h1{
     height: 200px;
     width: 700px;
     color:#fff;
-    background-image: url(../images/chat-bg.png);
+    background-image: url(images/chat-bg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size:cover;
